# gallery-tui

./: .gitignore  .gitmodules  Cargo.toml  README.md
.github/workflows/: release-binaries.yml
doc/: cache-and-logs.md  commands.md  configuration.md  controls.md  index.md  keymap.md  metadata-and-sorting.md  quick-start.md  rendering.md  terminal-graphics.md  theme.md  troubleshooting.md  views.md
src/: app.rs  cache.rs  capability.rs  config.rs  event.rs  keymap.rs  layout.rs  logging.rs  main.rs  metadata.rs  model.rs  native_image.rs  render.rs  scanner.rs  terminal.rs  ui.rs
src/app/: commands.rs  input.rs  navigation.rs  prompt.rs  prompt_input.rs  results.rs  tests.rs
src/app/tests/: commands.rs  metadata.rs  navigation.rs  prompt.rs
src/cache/: tests.rs
src/capability/: tests.rs
src/config/: tests.rs
src/keymap/: tests.rs
src/layout/: tests.rs
src/metadata/: tests.rs
src/model/: tests.rs
src/native_image/: tests.rs
src/render/: tests.rs
src/scanner/: tests.rs
src/ui/: footer.rs  image.rs  modal.rs
